# legendary-barnacle

./: .gitignore  CMakeLists.txt  Notes.txt  Plan.docx  main.cpp
include/game/: SCGame.cpp  SCGame.hpp
include/graphics/: SCDrawable.hpp  SCRenderer.cpp  SCRenderer.hpp  SCScreen.cpp  SCScreen.hpp
include/physics/: SCPhysicalArea.cpp  SCPhysicalArea.hpp  SCPhysicalObject.cpp  SCPhysicalObject.hpp
include/utilities/: SCUtilities.cpp  SCUtilities.hpp
libs/SFML-2.5.1/: CMakeCache.txt
libs/SFML-2.5.1 - Backup/: CMakeCache.txt  Makefile  SFMLStaticTargets.cmake  cmake_install.cmake
libs/SFML-2.5.1 - Backup/build release/: Makefile  SFMLStaticTargets.cmake  cmake_install.cmake
libs/SFML-2.5.1 - Backup/build release/src/SFML/: Makefile
libs/SFML-2.5.1 - Backup/build release/src/SFML/Main/: Makefile
libs/SFML-2.5.1 - Backup/build release/src/SFML/Network/: cmake_install.cmake
libs/SFML-2.5.1 - Backup/src/SFML/: Makefile  cmake_install.cmake
libs/SFML-2.5.1 - Backup/src/SFML/Audio/: Makefile  cmake_install.cmake
libs/SFML-2.5.1 - Backup/src/SFML/Graphics/: Makefile  cmake_install.cmake
libs/SFML-2.5.1 - Backup/src/SFML/Main/: Makefile  cmake_install.cmake
libs/SFML-2.5.1 - Backup/src/SFML/Network/: Makefile  cmake_install.cmake
libs/SFML-2.5.1 - Backup/src/SFML/System/: Makefile  cmake_install.cmake
libs/SFML-2.5.1 - Backup/src/SFML/Window/: Makefile  cmake_install.cmake
libs/SFML-2.5.1/lib/cmake/SFML/: SFMLConfig.cmake  SFMLConfigDependencies.cmake  SFMLStaticTargets.cmake
libs/SFML-2.5.1/src/SFML/: cmake_install.cmake
libs/SFML-2.5.1/src/SFML/Audio/: Makefile  cmake_install.cmake
libs/SFML-2.5.1/src/SFML/Graphics/: Makefile  cmake_install.cmake
libs/SFML-2.5.1/src/SFML/Main/: cmake_install.cmake
libs/SFML-2.5.1/src/SFML/Network/: Makefile
libs/SFML-2.5.1/src/SFML/System/: Makefile  cmake_install.cmake
libs/SFML-2.5.1/src/SFML/Window/: Makefile  cmake_install.cmake
tests/: tests.cpp
